--- a/Intro-to-web-dev/html-project/about.html
+++ b/Intro-to-web-dev/html-project/about.html
@@ -6,6 +6,24 @@
     <title>About Me</title>
 </head>
 <body>
-    
+    <a href="index.html">
+        <h1>Home</h1>
+    </a>
+    <h2>About Me</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quam labore sint nam quos id fugit rerum voluptate facilis magni!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, doloremque.</p>
+    <p>Here are some accomplishments about me:</p>
+    <ul>
+        <li>
+            I did this
+        </li>
+        <li>
+            I did that
+        </li>
+        <li>
+            And the third
+        </li>
+    </ul>
+
 </body>
 </html>
