--- a/Intro-to-web-dev/css-project/index.html
+++ b/Intro-to-web-dev/css-project/index.html
@@ -52,8 +52,8 @@
         <h2 class="article-title">BREAKING: Luna is Adorable</h2>
         <img
           class="article-img"
-          src="http://pets-images.dev-apis.com/pets/dog25.jpg"
-          alt="Luna in a suitcase"
+          src="images/cute-belle.JPG"
+          alt="Bellie lookin all cute"
         />
         <p class="article-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
