--- a/Intro-to-web-dev/css-project/index.html
+++ b/Intro-to-web-dev/css-project/index.html
@@ -49,7 +49,7 @@
         </p>
       </article>
       <article class="story story-2">
-        <h2 class="article-title">BREAKING: Luna is Adorable</h2>
+        <h2 class="article-title">BREAKING: Bellie is Adorable</h2>
         <img
           class="article-img"
           src="images/cute-belle.JPG"
