--- a/Intro-to-web-dev/coffee-masters-project/index.html
+++ b/Intro-to-web-dev/coffee-masters-project/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Coffee Masters</title>
 </head>
 <body>
     <div class="page">
         <div class="brand-header">
+            <img src="https://btholt.github.io/complete-intro-to-web-dev-v3/images/coffee_masters_logo.png" alt="coffee masters logo" class="logo">
             <h2>Coffee Masters</h2>
         </div>
         <section class="left-half">
@@ -18,19 +25,26 @@
                 <div class="line-item">
                     <div class="qty">x1</div>
                     <div class="item-name">test item</div>
-                    <div class="addon">cream</div>
+                    <ul class="addon">
+                        <div>cream</div>
+                    </ul>
                     <div class="price">$2.00</div>
                 </div>
                 <div class="line-item">
                     <div class="qty">x1</div>
                     <div class="item-name">test item</div>
-                    <div class="addon">cream</div>
+                    <ul class="addon">
+                        <div>cream</div>
+                        <div>double cream</div>
+                    </ul>
                     <div class="price">$2.00</div>
                 </div>
                 <div class="line-item">
                     <div class="qty">x1</div>
                     <div class="item-name">test item</div>
-                    <div class="addon">cream</div>
+                    <ul class="addon">
+                        <div>cream</div>
+                    </ul>
                     <div class="price">$2.00</div>
                 </div>
             </div>
@@ -39,9 +53,21 @@
             <div class="name order-contents">
                 <h3 class="content-label">NAME</h3>
                 <!-- to do -->
+                <h4 class="name-label input-label">Name for order</h4>
+                <div class="name-input-wrapper input-wrapper">
+                    <input type="text" class="name-input order-input">
+                </div>
             </div>
             <div class="payment order-contents">
                 <h3 class="content-label">PAYMENT</h3>
+                <h4 class="payment-label input-label">Card number</h4>
+                <div class="payment-input-wrapper input-wrapper">
+                    <input type="text" class="payment-input order-input">
+                </div>
+                <h4 class="cvv-label input-label">CCV Number</h4>
+                <div class="cvv-input-wrapper input-wrapper">
+                    <input type="text" class="cvv-input order-input">
+                </div>
             </div>
         </section>
         
@@ -60,7 +86,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="detail">
+                    <div class="detail detail-total">
                         <p>Total</p>
                         <p>$0.00</p>
                     </div>
