--- a/Intro-to-web-dev/word-masters-project/index.html
+++ b/Intro-to-web-dev/word-masters-project/index.html
@@ -9,31 +9,107 @@
 <body>
     <nav>Word Masters</nav>
     <div class="board-grid">
-        <input type="text" class="letter l1" placeholder="" />
-        <input type="text" class="letter l2" placeholder="" />
-        <input type="text" class="letter l3" placeholder="" />
-        <input type="text" class="letter l4" placeholder="" />
-        <input type="text" class="letter l5" placeholder="" />
-        <input type="text" class="letter l6" placeholder="" />
-        <input type="text" class="letter l7" placeholder="" />
-        <input type="text" class="letter l8" placeholder="" />
-        <input type="text" class="letter l9" placeholder="" />
-        <input type="text" class="letter l10" placeholder="" />
-        <input type="text" class="letter l11" placeholder="" />
-        <input type="text" class="letter l12" placeholder="" />
-        <input type="text" class="letter l13" placeholder="" />
-        <input type="text" class="letter l14" placeholder="" />
-        <input type="text" class="letter l15" placeholder="" />
-        <input type="text" class="letter l16" placeholder="" />
-        <input type="text" class="letter l17" placeholder="" />
-        <input type="text" class="letter l18" placeholder="" />
-        <input type="text" class="letter l19" placeholder="" />
-        <input type="text" class="letter l20" placeholder="" />
-        <input type="text" class="letter l21" placeholder="" />
-        <input type="text" class="letter l22" placeholder="" />
-        <input type="text" class="letter l23" placeholder="" />
-        <input type="text" class="letter l24" placeholder="" />
-        <input type="text" class="letter l25" placeholder="" />
+        <div class="letter-wrapper l1">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l2">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l3">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l4">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l5">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l6">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l7">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l8">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l9">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l10">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l11">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l12">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l13">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l14">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l15">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l16">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l17">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l18">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l19">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l20">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l21">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l22">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l23">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l24">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l25">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+
     </div>
     <script src="app.js"></script>
 </body>
