--- a/Intro-to-web-dev/word-masters-project/index.html
+++ b/Intro-to-web-dev/word-masters-project/index.html
@@ -109,6 +109,27 @@
             <input type="text" class="letter "  placeholder="" />
 
         </div>
+        <div class="letter-wrapper l26">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l27">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l28">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l29">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+        <div class="letter-wrapper l30">
+            <input type="text" class="letter "  placeholder="" />
+
+        </div>
+
 
     </div>
     <script src="app.js"></script>
