--- a/Intro-to-web-dev/word-masters-project/index.html
+++ b/Intro-to-web-dev/word-masters-project/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>Word Masters</nav>
+    <div class="loading-screen">🧙‍♂️</div>
     <div class="board-grid">
         <div class="letter-wrapper l1">
             <input type="text" class="letter "  placeholder="" />
