--- a/Intro-to-web-dev/word-masters-project/index.html
+++ b/Intro-to-web-dev/word-masters-project/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
     <title>Word Masters</title>
 </head>
 <body>
-    <nav>Word Masters</nav>
+    <nav class="brand">Word Masters</nav>
     <div class="loading-screen">🧙‍♂️</div>
     <div class="board-grid">
         <div class="letter-wrapper l1">
